# skywings

./: .env.example  PLAN.md  UX_FLOW.md  app.js  docker-compose.yml  index.html  styles.css
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  seed_flights.py
backend/alembic/: env.py
backend/alembic/versions/: 589efefae4f7_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  booking.py  flight.py  payment.py  user.py
backend/app/routers/: airports.py  auth.py  bookings.py  flights.py
backend/app/schemas/: auth.py  booking.py  flight.py
backend/app/utils/: security.py
backend/skywings_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  flights.ts
frontend/src/components/: AirportInput.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: BaggagePage.tsx  ConfirmationPage.tsx  DateTimePage.tsx  LoginPage.tsx  NewLoginPage.tsx  PaymentPage.tsx  RegisterPage.tsx  ResultsPage.tsx  SearchPage.tsx
frontend/src/types/: flight.ts  user.ts
